<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MenuActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/label_welcome"/>


        <Button android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_add_box"
            style="@style/MenuButton"
            android:textColor="@color/white"
            android:background="@color/teal_200"
            android:text="@string/btn_create_appointment" />

        <Button android:id="@+id/btnMyAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_schedule"
            style="@style/MenuButton"
            android:textColor="@color/white"
            android:background="@color/teal_200"
            android:text="@string/btn_my_appointment" />

        <Button android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_power_off"
            style="@style/MenuButton"
            android:textColor="@color/white"
            android:background="@color/teal_200"
            android:text="@string/btn_log_aut" />

</LinearLayout>


